testsuite/tests/indexed-types/should_fail/T9896.hs
{-# LANGUAGE TypeFamilies #-}
module T9896 where

class Test a where
  type TestT a :: *

instance Test Bool where
  newtype TestT Bool = Int
